Navbar is affixed on top and jumps to anchors correctly

--- a/onlinecv/css/styles.css
+++ b/onlinecv/css/styles.css
@@ -33,7 +33,7 @@
 	width: 0;
 	height: 0;
 	z-index: -1;
-	top: -40px;
+	margin-top: -2.6em;
 	left: 0;
 	visibility: hidden;
 }
