--- a/product/css/styles.css
+++ b/product/css/styles.css
@@ -18,7 +18,6 @@ html {
 }
 
 body {
-	/*flex-direction: column;*/
 	margin: 3em auto;
 	max-width: 70em;
 	font-family: "Helvetica", "Arial", sans-serif;
@@ -28,14 +27,13 @@ body {
 	font-feature-settings: "kern" 1;
 }
 
-/*nav-bar should always be on top*/
 /*Should have at least one media query*/
 /*Should utilice flex box*/
 section {
 	margin: 0 1em;
 }
 
-section div *:not(h2) {
+section div *:not(h2):not(span) {
 	padding: 0.3vw 0;
 	margin-left: 1.8vw;
 }
@@ -44,17 +42,19 @@ section div h2 {
 	padding: 1.3em 0;
 }
 
+/*DONE: nav-bar should always be on top*/
 #header {
 	display: flex;
 	position: fixed;
 	top: 0;
 	left: 0;
-	float: left;
+	right: 0;
 	padding: 0;
 	margin: 0 auto;
 	width: 100%;
 	background: #ccc;
 	height: 3em;
+	z-index: 9999;
 }
 
 #header #logo {
@@ -101,3 +101,23 @@ section div h2 {
 	padding: 0;
 	font-weight: bolder;
 }
+
+section > [id]:before {
+	display: block;
+	content: " ";
+	margin-top: -2.6em;
+	height: 3em;
+	visibility: hidden;
+}
+
+/*
+section div .anchor {
+	display: block;
+	position: absolute;
+	width: 0;
+	height: 0;
+	z-index: -1;
+	top: -40px;
+	left: 0;
+	visibility: hidden;
+}*/
